compiler/e2e/test/snapshot/ir/expression/function_call/symbol_is_not_callable/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the symbol `struct main::MyStruct` cannot be called
   ╭─ compiler/e2e/test/snapshot/ir/expression/function_call/symbol_is_not_callable/main.pnx:21:5
   │
21 │     MyStruct()
   │     ^^^^^^^^^^ not callable
   │
   = only functions, effect operation or enum with associated value can be called

error: the symbol `enum main::MyEnum` cannot be called
   ╭─ compiler/e2e/test/snapshot/ir/expression/function_call/symbol_is_not_callable/main.pnx:22:5
   │
22 │     MyEnum()
   │     ^^^^^^^^ not callable
   │
   = only functions, effect operation or enum with associated value can be called

error: the symbol `module main::myModule` cannot be called
   ╭─ compiler/e2e/test/snapshot/ir/expression/function_call/symbol_is_not_callable/main.pnx:23:5
   │
23 │     myModule()
   │     ^^^^^^^^^^ not callable
   │
   = only functions, effect operation or enum with associated value can be called

error: the symbol `trait main::MyTrait` cannot be called
   ╭─ compiler/e2e/test/snapshot/ir/expression/function_call/symbol_is_not_callable/main.pnx:24:5
   │
24 │     MyTrait[int32]()
   │     ^^^^^^^^^^^^^^^^ not callable
   │
   = only functions, effect operation or enum with associated value can be called

error: Compilation aborted due to 4 error(s)



stdout:
